# FreemanAPI

./: CMakeLists.txt  FreemanAPI_gcp.toml  README.md  hl_config.h  hl_consts.h  hl_cvars.h  hl_exports.h  hl_game_ext.h  hl_math.h  hl_types.h  hlmov.h  main.cpp
include/: freemanapi.h  hl_consts.h
